test/files/neg/xmltruncated1.scala
object Main {
  val stuff = <a>
