test/files/neg/xmltruncated1.check
xmltruncated1.scala:3: error: Input ended while parsing XML

^
one error found
